[gd_scene load_steps=3 format=3 uid="uid://knf1qwyyje7u"]

[ext_resource type="Script" path="res://Scripts/pause.gd" id="1_vb4mq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gj4s4"]
bg_color = Color(0.509804, 0, 0, 0.286275)

[node name="Pause" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vb4mq")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(14.5203, 4.70756)
theme_override_styles/panel = SubResource("StyleBoxFlat_gj4s4")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -39.5
offset_top = -50.5
offset_right = 39.5
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Continue" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "PLAY"

[node name="Restart" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "RESTART"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "OPTIONS"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "EXIT"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Restart" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
